# mtype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: README.md
examples/imports/: example_exports.m  example_import.m
examples/poly/: polymorphic_add.m  use_polymorphic_add.m
examples/record/: make_person.m
examples/trivial/: my_typed_add.m  use_typed_add.m
lang/+mt/: base.m  builtins.m  double.m  error.m  float.m  inputParser.m  int64.m  logical.m  scalar.m  single.m  string.m  toolbox.m
lang/+mt/+toolbox/: iofun.m
matlab/+mt/: build_entry_point.m  entry.mexmaci64  entry.mexw64  from_utf8.m  load_path.m  ls_path.m  package_dir.m  parse_struct.m  path_filepath.m  project_dir.m  require_directory.m  save_path.m  show_path.m  to_utf8.m  toolbox_paths.m
matlab/src/: entry.cpp  entry.cpp~  types.cpp  types.hpp  util.cpp  util.hpp
matlab/test/: Another.m  Crash.m  Eg.m  HetChild1.m  HetChild2.m  HetRoot.m  SubsrefTest.m  TestObj.m  X.m  anon_func1.m  check_if.m  compare_parse.m  consider_store.m  func_def_scaffold.m  my_sum.m  myfunc.m  path_example.m  redraw_cb.m  run_test_parse.m  scheme_func_call.m  scheme_func_ref1.m  scheme_func_ref2.m  terminally_recursive.m  test_arguments_as_external_function.m  test_call_script.m  test_class2.m  test_class3.m  test_classification.m  test_import.m  test_script.m
matlab/test/+pkg2/subdir/: test_nested_package.m
matlab/test/+st/: base.m  local_sub2_to_sub1.m  return_ref1.m  sub1.m  sub1_to_sub2.m  sub2.m  sub2_to_sub1.m  use1.m  use_ref1.m
matlab/test/@Base/: Base.m
matlab/test/@Example/: Example.m  test.m
matlab/test/@MyClass/: MyClass.m  method1.m
matlab/test/@function_handle/: minus.m
matlab/test/test_private/: adjacent.m  test_priv.m
matlab/test/test_private/private/: priv2.m  test_priv.m
matlab/test/unsafe/@categorical/: test.m
matlab/test/unsafe/@double/: plus.m  subsref.m
matlab/test/unsafe/@function_handle/: minus.m
notes/: add_application_type.m  classes.m  constraints.m  convert_to_ptr.m  dispatch.m  dispatch_impl.m  lists.m  note1.m  note2.m  note3.m  replace_type_handle.m  reserved.m  todo.m
src/mt/: CMakeLists.txt  ExternalFunctionRegistry.cpp  ExternalFunctionRegistry.hpp  FunctionRegistry.cpp  FunctionRegistry.hpp  Optional.hpp  Result.hpp  ast.hpp  ast_gen.cpp  ast_gen.hpp  character.cpp  character.hpp  character_traits.hpp  config.hpp  definitions.cpp  definitions.hpp  display.cpp  display.hpp  error.cpp  error.hpp  error_filter.cpp  error_filter.hpp  file_resolution.cpp  file_resolution.hpp  fs.hpp  handles.hpp  identifier.cpp  identifier.hpp  identifier_classification.cpp  identifier_classification.hpp  keyword.cpp  keyword.hpp  lang_components.cpp  lang_components.hpp  mt.hpp  parse.hpp  scan.cpp  scan.hpp  search_path.cpp  search_path.hpp  (+22 more)
src/mt/ast/: CMakeLists.txt  StringVisitor.cpp  StringVisitor.hpp  ast.cpp  ast.hpp  def.cpp  def.hpp  expr.cpp  expr.hpp  stmt.cpp  stmt.hpp  type_annot.cpp  type_annot.hpp  visitor.hpp
src/mt/fs/: CMakeLists.txt  code_file.cpp  code_file.hpp  directory.cpp  directory.hpp  file.cpp  file.hpp  path.cpp  path.hpp
src/mt/parse/: CMakeLists.txt  ast_gen.cpp  ast_gen.hpp  external_visibility.cpp  external_visibility.hpp  identifier_classification.cpp  identifier_classification.hpp
src/mt/scan/: CMakeLists.txt  scan.cpp  scan.hpp  token_manipulation.cpp  token_manipulation.hpp
src/mt/type/: CMakeLists.txt  components.cpp  components.hpp  destructured_member_visitor.hpp  error.cpp  error.hpp  instance.cpp  instance.hpp  library.cpp  library.hpp  member_visitor.hpp  pending_external_functions.cpp  pending_external_functions.hpp  simplify.cpp  simplify.hpp  subscripts.cpp  subscripts.hpp  substitution.cpp  substitution.hpp  type.cpp  type.hpp  type_constraint_gen.cpp  type_constraint_gen.hpp  type_identifier_resolution.cpp  type_identifier_resolution.hpp  type_import_resolution.cpp  type_import_resolution.hpp  type_properties.cpp  type_properties.hpp  type_relation.cpp  type_relation.hpp  type_relationships.cpp  type_relationships.hpp  type_representation.cpp  type_representation.hpp  type_scope.cpp  type_scope.hpp  type_store.cpp  type_store.hpp  type_visitor.hpp  (+6 more)
test/: CMakeLists.txt
test/external_funcs/: CMakeLists.txt  command_line.cpp  command_line.hpp  main.cpp  util.cpp  util.hpp
test/parse/: CMakeLists.txt  main.cpp
test/path_search/: CMakeLists.txt  main.cpp
test/path_search2/: CMakeLists.txt  main.cpp
test/relation/: CMakeLists.txt  main.cpp
test/string/: CMakeLists.txt  main.cpp
test/threading1/: CMakeLists.txt  main.cpp
test/types1/: CMakeLists.txt  TypeExprStringVisitor.cpp  TypeExprStringVisitor.hpp  debug.cpp  debug.hpp  error.cpp  error.hpp  instance.cpp  instance.hpp  library.cpp  library.hpp  main.cpp  member_visitor.cpp  member_visitor.hpp  simplify.cpp  simplify.hpp  substitution.cpp  substitution.hpp  test_cases.cpp  test_cases.hpp  type.cpp  type.hpp  type_constraint_gen.cpp  type_constraint_gen.hpp  type_equality.cpp  type_equality.hpp  type_properties.cpp  type_properties.hpp  type_relation.cpp  type_relation.hpp  type_relationships.cpp  type_relationships.hpp  type_representation.cpp  type_representation.hpp  type_store.cpp  type_store.hpp  typing.cpp  typing.hpp  unification.cpp  unification.hpp  (+2 more)
